# UAV_gimbal_camera

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: Spinnaker.cfg  parameters.yaml
include/: GimbalCameraNodelet.h
launch/: apriltag_calibration.launch  gimbal_camera.launch  mrs_gimbal_camera.launch  mrs_gimbal_camera_topictools.launch
rviz/: gimbal.rviz
src/: GimbalCameraNodelet.cpp
tmux_scripts/: .tmuxinator.yml  session.yml  tmp.txt
