<?xml version="1.0"?>
<package format="2">

  <name>mrs_gimbal_camera</name>
  <version>1.0.0</version>
  <description>more_desctription</description>

  <maintainer email="todo@email.com">todo_name</maintainer>
  <author email="todo@email.com">todo_name</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>apriltag_ros</depend> <!-- https://github.com/AprilRobotics/apriltag_ros -->
  <depend>spinnaker_camera_driver</depend> <!-- https://github.com/ros-drivers/flir_camera_driver -->
  <depend>mrs_serial</depend>
  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
